# PyeRDF

./: .gitignore  README.md  azim_integ.py  calibrate.py  erdf.py  pyproject.toml  requirements.txt
notebooks/: 01.1_dp.processing_ceta.ipynb  02.1_eRDF.ipynb
notebooks/exploratory/ed/: background.ipynb  eRDF_tests.ipynb
notebooks/exploratory/tem/: size_distribution.ipynb
notebooks/workflows/epdf/: 01.1_dp.processing_ceta.ipynb  01_auto_dp.processing.ipynb  02.1_eRDF.ipynb  02.2_auto_eRDF.ipynb  03_PCA.ipynb  Au_Gr.csv
src/PyeRDF.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data_processing.egg-info/: PKG-INFO  SOURCES.txt
src/mypackages/: azim_integ.py  calibrate.py  eRDF.py  edp_processing.py  funcs.py  gui.py  gui_helpers.py  run_erdf.py
src/mypackages/.ipynb_checkpoints/: eRDF-checkpoint.py
src/mypackages/data/: elements_factors.yaml
src/pyerdf/: azim_integ.py  calibrate.py  control_state.py  data_loader.py  eRDF.py  edp_processing.py  electron_scattering_table.py  funcs.py  gui.py  launcher.py  plot_style.py  run_erdf.py
src/pyerdf/.ipynb_checkpoints/: edp_processing-checkpoint.py
src/pyerdf/data/: elements_info_electron.yaml
