[project]
name = "PyeRDF"
version = "0.1.2"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "pandas>=2.1",
  "tifffile>=2023.8",
  "opencv-python>=4.9",
  "medpy>=0.4.0",
  "imagecodecs>=2023.1"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
mypackages = [
  "data/*.txt",
]